working on all 4 sites

--- a/about-page.html
+++ b/about-page.html
@@ -17,6 +17,8 @@
       Regarding tech, personally I have always been a big fan since I started
       using the interet at a young age.
     </section>
+
+    </section>
   </body>
-  <footer class="footer-2">Thanks For Visiting My Page!</footer>
+  <footer class="footer">Thanks For Visiting My Page!</footer>
 </html>
