--- a/home-page.html
+++ b/home-page.html
@@ -19,6 +19,14 @@
       "Be nice to nerds. Chances are you'll end up working for one." - Bill
       Gates
     </section>
+        <br />
+    <br />
+    <section class="image">
+      <img
+        src="https://t4.ftcdn.net/jpg/08/21/17/73/360_F_821177322_G50EsrhpLrJa8lWtN6ePc0ISRmBDL5l8.jpg"
+        alt="No Image"
+        height="300"
+      />
   </body>
   <br />
   <br />
