--- a/home-page.html
+++ b/home-page.html
@@ -23,7 +23,7 @@
     <br />
     <section class="image">
       <img
-        src="https://t4.ftcdn.net/jpg/08/21/17/73/360_F_821177322_G50EsrhpLrJa8lWtN6ePc0ISRmBDL5l8.jpg"
+        src="https://us.123rf.com/450wm/designofire/designofire1901/designofire190108170/114842678-vector-laptop-icon.jpg?ver=6"
         alt="No Image"
         height="300"
       />
