fleshed out contact page, working on portfolio page next

--- a/contact-forum.html
+++ b/contact-forum.html
@@ -7,6 +7,25 @@
     <title>Contact Me!</title>
     <header class="header">Contact Forum</header>
   </head>
-  <body></body>
+  <body>
+    <section class="message">Message Me Here!</section>
+    <br />
+    <form action="Contact Me:" method="post">
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" name="name" size="75" /><br />
+      <label for="email">Email:</label><br />
+      <input type="email" id="email" name="email" size="75" /><br /><br />
+
+      <textarea name="txtArea" rows="20" cols="90" resize: none;></textarea>
+      <input type="submit" value="Submit" />
+      <br />
+      <br />
+      <br />
+      <section class="detail">
+        Any questions, comments, or concerns? Leave your comment with a name and
+        email and I'll reply ASAP.
+      </section>
+    </form>
+  </body>
   <footer class="footer">Thanks For Visiting My Page!</footer>
 </html>
