did a little more editing, coming along well

--- a/contact-forum.html
+++ b/contact-forum.html
@@ -8,7 +8,7 @@
     <header class="header">Contact Forum</header>
   </head>
   <body>
-    <section class="message">Message Me Here!</section>
+    <section class="message">Message Me Here:</section>
     <br />
     <form action="Contact Me:" method="post">
       <label for="name">Name:</label><br />
