--- a/about-page.html
+++ b/about-page.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Glenn Robey</title>
     <header class="header">About Me</header>
+        <nav class= "nav-links"><a href="./home-page.html" style="color: red">Home</a><a href="#" style="color: red">About</a><a href="./portfolio-page.html" style="color: red">Portfolio</a><a href="./contact-forum.html" style="color: red">Contact</a>
+    </nav>
+    <br>
   </head>
   <body>
     <br />
