--- a/contact-forum.html
+++ b/contact-forum.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me!</title>
     <header class="header">Contact Forum</header>
+        <nav class= "nav-links"><a href="./home-page.html" style="color: red">Home</a><a href="./about-page.html" style="color: red">About</a><a href="./portfolio-page.html" style="color: red">Portfolio</a><a href="#" style="color: red">Contact</a>
+    </nav>
+    <br>
   </head>
   <body>
     <section class="message">Message Me Here:</section>
@@ -18,13 +21,11 @@
 
       <textarea name="txtArea" rows="20" cols="90" resize: none;></textarea>
       <input type="submit" value="Submit" />
-      <br />
-      <br />
-      <br />
       <section class="detail">
         Any questions, comments, or concerns? Leave your comment with a name and
         email and I'll reply ASAP.
       </section>
+      <br>
     </form>
   </body>
   <footer class="footer">Thanks For Visiting My Page!</footer>
