--- a/home-page.html
+++ b/home-page.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glenn Robey's Personal Page</title>
     <header class="title">Glenn Robey</header>
-    <br />
+    <nav class= "nav-links"><a href="#" style="color: red">Home</a><a href="./about-page.html" style="color: red">About</a><a href="./portfolio-page.html" style="color: red">Portfolio</a><a href="./contact-forum.html" style="color: red">Contact</a>
+    </nav>
+    <br>
     <section class="mission-statement">
       Glenn Robey is an apsiring programmer with a deep passion for all things
       tech related. He always had a great love for computers, and is very
