--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <header class="header">My Portfolio</header>
+    <nav class="nav-links">
+      <style></style> <a href="./home-page.html" style="color: red">Home</a
+      ><a href="./about-page.html" style="color: red">About</a
+      ><a href="#" style="color: red">Portfolio</a
+      ><a href="./contact-forum.html" style="color: red">Contact</a>
+    </nav>
+    <br />
   </head>
   <body></body>
   <footer class="footer">Thanks For Visiting My Page!</footer>
