did some work on contact page, next step is adding my portfolio

--- a/contact-forum.html
+++ b/contact-forum.html
@@ -10,8 +10,10 @@
     </nav>
     <br>
   </head>
-  <body>
-    <section class="message">Message Me Here:</section>
+  <body><section class="further-contact"><em><u>Further Contact:</u></em><br>
+    <br><li><b><u>Email:</u></b> glennrobey95@gmail.com</li>
+    <li><b><u>Github:</u></b> <a href="https://github.com/glennrobey/" style="color:red;">https:/www./github.com/glennrobey</a> </li>
+  </ul></section>
     <br />
     <form action="Contact Me:" method="post">
       <label for="name">Name:</label><br />
@@ -20,7 +22,7 @@
       <input type="email" id="email" name="email" size="75" /><br /><br />
 
       <textarea name="txtArea" rows="20" cols="90" resize: none;></textarea>
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Submit" /><br><br>
       <section class="detail">
         Any questions, comments, or concerns? Leave your comment with a name and
         email and I'll reply ASAP.
