--- a/home-page.html
+++ b/home-page.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./home-page.css" />
+    <link rel="js-script" href="./home-page.js">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glenn Robey's Personal Page</title>
