everything is done but .js file and pull request, in the meantime I'm adding more paragraph content to each page.

--- a/contact-forum.html
+++ b/contact-forum.html
@@ -10,10 +10,10 @@
     </nav>
     <br>
   </head>
-  <body><section class="further-contact"><em><u>Further Contact:</u></em><br>
+  <body><address class="further-contact"><b><i><u>Further Contact:</u></i></b><br>
     <br><li><b><u>Email:</u></b> glennrobey95@gmail.com</li>
-    <li><b><u>Github:</u></b> <a href="https://github.com/glennrobey/" style="color:red;">https:/www./github.com/glennrobey</a> </li>
-  </ul></section>
+    <li><b><u>Github:</u></b> <a href="https://www.github.com/glennrobey/" style="color:red;">https://www.github.com/glennrobey</a> </li>
+  </ul></address>
     <br />
     <form action="Contact Me:" method="post">
       <label for="name">Name:</label><br />
