--- a/about-page.html
+++ b/about-page.html
@@ -18,7 +18,7 @@
       I have many interests and passions, even those that are not tech-related.
       I am an avid musician who plays bass guitar, as well as photographer.
       Regarding tech, personally I have always been a big fan since I started
-      using the interet at a young age. </section>
+      using the internet at a young age. My preference vs. front end or back end goes to back end, however I am planning to commit to fullstack development. C++ is the language I intend to learn after my class has ended.</section>
     </section class="image"> <img src="https://wallpapers.com/images/thumbnail/grunge-music-note-black-background-vzgalq594fozvevh.webp" alt="No Image">
    <img src="https://i.pinimg.com/originals/ef/48/88/ef488827417f1cb97ec67b6409e95ef4.jpg" alt="No Image" height="500">
   </section>
