everything is done but .js file and pull request, in the meantime I'm adding more paragraph content to each page.

--- a/home-page.html
+++ b/home-page.html
@@ -12,7 +12,7 @@
     <br>
     <section class="mission-statement">
       Glenn Robey is an apsiring programmer with a deep passion for all things
-      tech related. He always had a great love for computers, and is very
+      tech-related. He always had a great love for computers, and is very
       diligent with his tasks.
     </section>
     <section><br /><br /></section>
