--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -27,7 +27,7 @@
     <section  class="portfolio">I created a directory for a local zoo. HTML was used.  <br>    <img src="zoo-directory.png" alt="No Zoo Page Found" height="400"></img>
     </section>
     <section  class="portfolio">I secured a bank vault for a client. JavaScript was used. <br>
-      <img src="secured-vault.png" alt="No Vault Shown" height="200" width="425"> </section>
+      <img src="secured-vault.png" alt="No Vault Shown" height="200" width="425"> </section> <
   </body>
   <footer class="footer">Thanks For Visiting My Page!</footer>
 </html>
