--- a/home-page.html
+++ b/home-page.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./home-page.css" />
-    <link rel="js-script" href="./home-page.js">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glenn Robey's Personal Page</title>
-    <header class="title">Glenn Robey</header>
+    <script src="./home-page.js"></script>
     <nav class= "nav-links"><a href="#" style="color: red">Home</a><a href="./about-page.html" style="color: red">About</a><a href="./portfolio-page.html" style="color: red">Portfolio</a><a href="./contact-forum.html" style="color: red">Contact</a>
     </nav>
     <br>
