did some minor tweaks

--- a/home-page.html
+++ b/home-page.html
@@ -14,10 +14,10 @@
     <section><br /><br /></section>
   </head>
   <body>
-    <section class="quote">
+    <p class="quote">
       "Be nice to nerds. Chances are you'll end up working for one." - Bill
       Gates
-    </section>
+    </p>
         <br />
     <br />
     <section class="image">
