--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -20,15 +20,15 @@
       <b><u>Completed Projects: </u></b>
     </section>
     <br>
-    <section class="portfolio">
+    <p class="portfolio">
       I hacked into a mainframe to destroy a certain project. Terminal was used. <br />
       <img src="project-shutdown.png" alt="No Server Shown" height="300"></img>
-    </section><br>
-    <section  class="portfolio">I created a directory for a local zoo. HTML was used.  <br>    <img src="zoo-directory.png" alt="No Zoo Page Found" height="400"></img>
-    </section>
+    </p><br>
+    <p  class="portfolio">I created a directory for a local zoo. HTML was used.  <br>    <img src="zoo-directory.png" alt="No Zoo Page Found" height="400"></img>
+    </p>
     <br>
-    <section  class="portfolio">I secured a bank vault for a client. JavaScript was used. <br>
-      <img src="secured-vault.png" alt="No Vault Shown" height="200" width="425"> </section> 
+    <p  class="portfolio">I secured a bank vault for a client. JavaScript was used. <br>
+      <img src="secured-vault.png" alt="No Vault Shown" height="200" width="425"> </p> 
   </body> <br>
   <footer class="footer">Thanks For Visiting My Page!</footer>
 </html>
