--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -20,15 +20,17 @@
       <b><u>Completed Projects: </u></b>
     </section>
     <br>
+    <div class="portfolio-container">
     <p class="portfolio">
       I hacked into a mainframe to destroy a certain project. Terminal was used. <br />
-      <img src="project-shutdown.png" alt="No Server Shown" height="285"></img>
+      <img src="project-shutdown.png" alt="No Server Shown" width="450" class= "portfolio-image"></img>
     </p><br>
-    <p  class="portfolio">I created a directory for a local zoo. HTML was used.  <br>    <img src="zoo-directory.png" alt="No Zoo Page Found" height="350"></img>
+    <p  class="portfolio">I created a directory for a local zoo. HTML was used.  <br>    
+      <img src="zoo-directory.png" alt="No Zoo Page Found" width="425" class= "portfolio-image"></img>
     </p>
     <br>
     <p  class="portfolio">I secured a bank vault for a client. JavaScript was used. <br>
-      <img src="secured-vault.png" alt="No Vault Shown" height="200" width="425"> </p> 
+      <img src="secured-vault.png" alt="No Vault Shown" width="425" class= "portfolio-image" > </p> </div>
   </body> <br>
   <footer class="footer">Thanks For Visiting My Page!</footer>
 </html>
