completely done! but will double check

--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -26,7 +26,7 @@
       <img src="project-shutdown.png" alt="No Server Shown" width="450" class= "portfolio-image"></img>
     </p><br>
     <p  class="portfolio">I created a directory for a local zoo. HTML was used.  <br>    
-      <img src="zoo-directory.png" alt="No Zoo Page Found" width="425" class= "portfolio-image"></img>
+      <img src="zoo-directory.png" alt="No Zoo Page Found" width="425" class= "portfolio-image portfolio-image-zoo"></img>
     </p>
     <br>
     <p  class="portfolio">I secured a bank vault for a client. JavaScript was used. <br>
