--- a/home-page.html
+++ b/home-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Put this up so I know I have the last save-->
   <head>
     <link rel="stylesheet" href="./home-page.css" />
   <script src="./home-page.js"></script>
