--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <header class="header">My Portfolio</header>
     <nav class="nav-links">
-      <style></style> <a href="./home-page.html" style="color: red">Home</a
+       <a href="./home-page.html" style="color: red">Home</a
       ><a href="./about-page.html" style="color: red">About</a
       ><a href="#" style="color: red">Portfolio</a
       ><a href="./contact-forum.html" style="color: red">Contact</a>
